--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -21,6 +22,9 @@
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.8",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "@typechain/ethers-v6": "^0.4.3",
     "@typechain/hardhat": "^8.0.3",
     "@types/jest": "^29.5.14",
@@ -28,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sinon-chai": "^4.0.0",
+    "@types/testing-library__react": "^10.0.1",
     "autoprefixer": "^10.4.20",
     "chai": "^4.5.0",
     "dotenv": "^16.4.5",
@@ -36,9 +41,12 @@
     "ethers": "^6.13.4",
     "hardhat": "^2.22.15",
     "hardhat-gas-reporter": "^1.0.10",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.47",
     "solidity-coverage": "^0.8.13",
     "tailwindcss": "^3.4.14",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
     "typescript": "^5"
