--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
     "target": "ES2020",
     "lib": ["dom", "dom.iterable", "esnext", "ES2020"],
     "allowJs": true,
@@ -12,9 +13,15 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
-    "types": ["node", "jest", "chai", "mocha", "hardhat"],
+    "types": [
+      "node",
+      "jest",
+      "chai",
+      "mocha",
+      "hardhat",
+      "@testing-library/jest-dom"
+    ],
     "plugins": [
       {
         "name": "next"
